[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk_analysis_utils"
version = "0.1.0"
description = "A utility for risk analysis from the results of our integration tests"
authors = [{ name = "Dhagash Desai", email = "dhagash.desai@smartais.de" }]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"